UX-1658 Fix figure overflow

--- a/css/vendors.css
+++ b/css/vendors.css
@@ -14877,6 +14877,11 @@ a.usecase__link:hover .usecase__title h3 {
   max-width: 100%
 }
 
+#content figure {
+  max-width: 100vw;
+  overflow-x: scroll;
+}
+
 #content .screenshot {
   max-width: 100%;
   -webkit-box-shadow: 0 .125rem .25rem 0 rgba(0, 0, 0, .26);
